--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
+    "postcss": "^8.4.27",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
   },
   "type": "module",
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^2.3.0",
     "@floating-ui/dom": "^1.5.1",
+    "@fontsource/quicksand": "^5.0.8",
     "flowbite": "^1.8.1",
     "flowbite-svelte": "^0.41.2",
     "tailwind-merge": "^1.14.0"
